tests/compile-fail/integration_suite__integration__general__const_string_to_int.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unexpected token `string`
   ┌─ <input>:28:15
   │
28 │         const string x = "hi";
   │               ^^^^^^ unexpected token
   │
   = 
     Expected one of "!=", "%", "%=", "&", "&&", "&=", "(", ")", "*", "*=", "+", "+=", ",", "-", "-=", "/", "/=", ":", ";", "<", "<=", "=", "==", ">", ">=", "?", "@", "[", "]", "^", "^=", "{", "|", "|=", "||" or "}"


